--- a/.travis.yml
+++ b/.travis.yml
@@ -3,4 +3,4 @@ python:
   - "2.7"
 
 install: "pip install -r requirements.txt"
-script: python mysite/manage.py tests 
+script: python mysite/manage.py faketest
